--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: rgb(199, 148, 199);
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   box-sizing: border-box;
   margin: 0px;
