--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -1,38 +1,63 @@
 .products-container {
-    display: flex;
-    flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .card-container {
-    border: 2px solid rgb(85, 84, 84);
-    flex-direction: row;
-    width: 300px;
-    height: 350px;
-    border-radius: 10px;
-    margin: 10px;
+  border: 2px solid #555454;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 300px;
+  height: 350px;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 .product-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 10px;
 }
 
 .product-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .product-buttons {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
 }
 
 .product-buttons button {
-    margin: 10px;
-    border-radius: 10px;
+  margin: 10px;
+  border-radius: 10px;
 }
+/*# sourceMappingURL=Products.css.map */
