--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -1,7 +1,18 @@
+@font-face {
+    font-family: 'lumos';
+    src: url('../../LUMOS.TTF') format('truetype'), url('../../LUMOS.woff') format('woff');
+}
+
+$font-stack: lumos;
+
 .products-container {
     display: flex;
     flex-wrap: wrap;
     font: 100% $font-stack;
+}
+
+.normal-text {
+    font-family: serif;
 }
 
 .card-container {
@@ -25,15 +36,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    font-size: large;
 }
 
 .products-buttons {
     display: flex;
     justify-content: space-around;
     width: 100%;
-}
 
-.products-buttons button {
-    margin: 10px;
-    border-radius: 10px;
+        button {
+            margin: 10px;
+            border-radius: 10px;
+            font: 100% $font-stack;
+        }
 }
