--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -9,13 +9,14 @@ $font-stack: lumos;
     height: 125px;
     background-color: rgb(80, 76, 76);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     margin: 10px;
 
         button {
-            margin: 10px;
-            font-size: 20px;
-            border-radius: 5px;
             font: 100% $font-stack;
+            margin: 10px;
+            font-size: 30px;
+            border-radius: 5px;
         }
 }
