--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -3,9 +3,20 @@
   src: url("../../LUMOS.TTF") format("truetype"), url("../../LUMOS.woff") format("woff");
 }
 
+.dashboard-main-container {
+  background-image: url("../../diagonalleywash.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
 .dashboard-nav-container {
   height: 125px;
-  background-color: #504c4c;
+  background-color: #382205;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,7 +26,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 10px;
+  padding: 0px 10px 0px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .dashboard-nav-container button {
