--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -5,13 +5,25 @@
 
 $font-stack: lumos;
 
+.dashboard-main-container {
+    background-image: url('../../diagonalleywash.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
 .dashboard-nav-container {
     height: 125px;
-    background-color: rgb(80, 76, 76);
+    background-color: rgb(56, 34, 5);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px;
+    padding: 0px 10px 0px;
+    width: 100%;
+    box-sizing: border-box;
 
         button {
             font: 100% $font-stack;
