--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'lumos';
+    src: url('../../LUMOS.TTF') format('truetype'), url('../../LUMOS.woff') format('woff');
+}
+
+$font-stack: lumos;
+
 .landing-container {
     height: 100%;
     width: 100%;
@@ -17,10 +24,15 @@
 
 .landing-admin {
     color: white;
+    font: 100% $font-stack;
+    font-size: 20px;
+    margin: 10px;
 }
 
 .landing-buttons {
         button {
             border-radius: 5px;
+            font: 100% $font-stack;
+            margin: 5px;
         }
 }
