--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -10,6 +10,9 @@ $font-stack: lumos;
     flex-direction: column;
     align-items: center;
     font: 100% $font-stack;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
 .normal-text{
@@ -24,10 +27,16 @@ $font-stack: lumos;
         button {
             font: 100% $font-stack;
             font-size: large; 
+            border-radius: 5px;
+            background-color: rgb(56, 34, 5);
+            border: 1px solid rgb(184, 155, 117);
+            color: rgb(184, 155, 117);
+        }
+
+        button:hover {
+            background-color: rgb(184, 155, 117);
+            border: 1px solid rgb(56, 34, 5);
+            color: rgb(56, 34, 5);
         }
 }
 
-// .product-buttons button{
-//     font: 100% $font-stack;
-//     font-size: large;
-// }
