--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -3,7 +3,41 @@
   src: url("../../LUMOS.TTF") format("truetype"), url("../../LUMOS.woff") format("woff");
 }
 
+.products-add-button button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+  font: 100% lumos;
+  font-size: 20px;
+  background-color: #382205;
+  border: 1px solid #b89b75;
+  color: #b89b75;
+}
+
+.products-add-button button:hover {
+  background-color: #b89b75;
+  border: 1px solid #b89b75;
+  color: #382205;
+}
+
 .products-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.products-products {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -17,7 +51,8 @@
 }
 
 .card-container {
-  border: 2px solid #555454;
+  border: 2px solid #382205;
+  background-color: #b89b75;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -69,7 +104,16 @@
 
 .products-buttons button {
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   font: 100% lumos;
+  background-color: #382205;
+  border: 1px solid #b89b75;
+  color: #b89b75;
+}
+
+.products-buttons button:hover {
+  background-color: #b89b75;
+  border: 1px solid #382205;
+  color: #382205;
 }
 /*# sourceMappingURL=Products.css.map */
