--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -6,12 +6,15 @@
 .dashboard-main-container {
   background-image: url("../../diagonalleywash.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  overflow-y: scroll;
 }
 
 .dashboard-nav-container {
