--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -8,11 +8,14 @@ $font-stack: lumos;
 .dashboard-main-container {
     background-image: url('../../diagonalleywash.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    overflow-y: scroll;
 }
 
 .dashboard-nav-container {
