--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -15,6 +15,7 @@
   margin: 0px;
   padding: 0px;
   overflow-y: scroll;
+  padding-top: 125px;
 }
 
 .dashboard-nav-container {
@@ -33,6 +34,9 @@
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 
 .dashboard-nav-container button {
