--- a/src/Components/Edit/Edit.css
+++ b/src/Components/Edit/Edit.css
@@ -14,7 +14,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 500px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font: 100% lumos;
   margin: auto;
   border: 2px solid #382205;
@@ -26,7 +28,8 @@
 }
 
 .edit-container h1 {
-  font-size: large;
+  font-size: larger;
+  font-weight: bold;
 }
 
 .edit-container button {
@@ -53,5 +56,17 @@
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.edit-inputs input {
+  width: 90%;
+}
+
+.edit-desc-input {
+  width: 90%;
 }
 /*# sourceMappingURL=Edit.css.map */
