--- a/src/Components/Edit/Edit.css
+++ b/src/Components/Edit/Edit.css
@@ -18,6 +18,7 @@
       -ms-flex-align: center;
           align-items: center;
   font: 100% lumos;
+  font-size: larger;
   margin: auto;
   border: 2px solid #382205;
   background-color: #b89b75;
