--- a/src/Components/Edit/Edit.scss
+++ b/src/Components/Edit/Edit.scss
@@ -28,6 +28,7 @@ $font-stack: lumos;
     justify-content: center;
     align-items: center;
     font: 100% $font-stack;
+    font-size: larger;
     margin: auto;
     border: 2px solid rgb(56, 34, 5);
     background-color: rgb(184, 155, 117);
