--- a/src/Components/Edit/Edit.css
+++ b/src/Components/Edit/Edit.css
@@ -70,4 +70,10 @@
 .edit-desc-input {
   width: 90%;
 }
+
+@media (max-width: 450px) {
+  .edit-container {
+    width: 350px;
+  }
+}
 /*# sourceMappingURL=Edit.css.map */
