--- a/src/Components/Add/Add.scss
+++ b/src/Components/Add/Add.scss
@@ -79,3 +79,9 @@ $font-stack: lumos;
 .add-desc-input {
     width: 90%;
 }
+
+@media (max-width: 450px) {
+    .add-container {
+        width: 350px;
+    }
+}
