--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -7,6 +7,7 @@
   margin: 10px;
   border-radius: 5px;
   font: 100% lumos;
+  font-size: 20px;
   background-color: #382205;
   border: 1px solid #b89b75;
   color: #b89b75;
@@ -51,6 +52,7 @@
   margin: 10px;
   border-radius: 5px;
   font: 100% lumos;
+  font-size: 20px;
   background-color: #382205;
   border: 1px solid #b89b75;
   color: #b89b75;
@@ -66,6 +68,7 @@
   margin: 10px;
   border-radius: 5px;
   font: 100% lumos;
+  font-size: 20px;
   background-color: #382205;
   border: 1px solid #b89b75;
   color: #b89b75;
