--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -10,6 +10,7 @@ $font-stack: lumos;
         margin: 10px;
         border-radius: 5px;
         font: 100% $font-stack;
+        font-size: 20px;
         background-color: rgb(56, 34, 5);
         border: 1px solid rgb(184, 155, 117);
         color: rgb(184, 155, 117);
